--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -40,5 +43,20 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@storybook/addon-essentials": "7.0.14",
+    "@storybook/addon-interactions": "7.0.14",
+    "@storybook/addon-links": "7.0.14",
+    "@storybook/blocks": "7.0.14",
+    "@storybook/preset-create-react-app": "7.0.14",
+    "@storybook/react": "7.0.14",
+    "@storybook/react-webpack5": "7.0.14",
+    "@storybook/testing-library": "0.0.14-next.2",
+    "babel-plugin-named-exports-order": "0.0.2",
+    "eslint-plugin-storybook": "^0.6.12",
+    "prop-types": "15.8.1",
+    "storybook": "7.0.14",
+    "webpack": "5.83.1"
   }
 }
