--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,8 +13,10 @@
     "@types/node": "^16.18.32",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "bootstrap": "^5.2.3",
     "orsys-tjs-meme": "^1.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -24,9 +29,9 @@
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "cmpLayout" :"npx generate-react-cli c --type=layout",
-    "cmpFunctionnal" :"npx generate-react-cli c --type=functionnal",
-    "cmpUi" :"npx generate-react-cli c --type=ui"
+    "cmpLayout": "npx generate-react-cli c --type=layout",
+    "cmpFunctionnal": "npx generate-react-cli c --type=functionnal",
+    "cmpUi": "npx generate-react-cli c --type=ui"
   },
   "eslintConfig": {
     "extends": [
